that last thing but for real

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
               </a>
           </div>
           <a href="http://urban.uw.edu/"><img src="images/urban_at_uw_logo.png" class="center" width="200" alt="Urban@UW Logo"/></a>
-            <a href="http://www.feetfirst.org/"><img src="images/feet_first_logo.png" class="center" width="200" alt="feetfirst logo"/></a>
+            <a href="http://www.feetfirst.org/"><img src="images/feet_first_logo.jpg" class="center" width="200" alt="feetfirst logo"/></a>
             <a href="http://escience.washington.edu/"><img src="images/DataScienceForSocialGood.png" class="center" width="200" alt="Urban@UW Logo"/></a>
         </header>
         <div class="row uniform">
