Update header links

--- a/index.html
+++ b/index.html
@@ -44,13 +44,11 @@
         <div class="banner-box">
             <img src="images/OpenSidewalks-LogoFinal-large.png" alt="Open Sidewalks Logo" width="400px"/>
             <ul class="actions">
-                <li><a href="http://wiki.openstreetmap.org/wiki/Proposed_features/sidewalk_schema" class="button big">OSM
-                    Schema Proposal</a></li>
-                <li><a href="http://wiki.openstreetmap.org/wiki/Seattle,_Washington/Sidewalk_Import" class="button big">OSM
-                    Import Proposal</a></li>
+                <li><a href="https://github.com/OpenSidewalks/OpenSidewalks-Schema" class="button big">OpenSidewalks Schema</a></li>
+                <li><a href="http://wiki.openstreetmap.org/wiki/Proposed_features/sidewalk_schema" class="button big">OSM Schema Proposal</a></li>
                 <li>
                     <a href="https://github.com/OpenSidewalks"
-                       class="button big">Github</a></li>
+                       class="button big">Github Project</a></li>
             </ul>
      <!--       <ul class="actions">
                 <li><a href="https://id.opensidewalks.com" class="button small">iD Editor</a></li>
